token now has username
